fixed slider overflow issue

--- a/client/src/components/CardSlider/CardSlider.scss
+++ b/client/src/components/CardSlider/CardSlider.scss
@@ -1,13 +1,10 @@
 .cardSlider--Container{
-    display:'flex';
-    flex-direction:'column';
-   margin: 100;
-   background-color:white;
    gap: 1rem;
-   position:relative;
+  position: relative;
    padding: 2rem 0;
      h1{
         margin-left: 50px;
+        text-align: center;
    }
 }
 .slider{
@@ -27,14 +24,14 @@
     transition: 0.3s ease-in-out;
     svg{
         font-size: 2rem;
-
+      margin-top: 50px;
     }
 }
 .none{
    display: none; 
 }
 .left{
-    left: 0;
+    left:0;
 }
 .right{
     right: 0;
